[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Cross.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/SomeButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/MusicBox.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Visualicer.tscn" type="PackedScene" id=5]

[node name="MusicBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Cross" parent="." instance=ExtResource( 1 )]
position = Vector2( 8, 8 )

[node name="Songs" type="Panel" parent="."]
margin_left = 40.0
margin_top = 32.0
margin_right = 152.0
margin_bottom = 144.0

[node name="ScrollContainer" type="ScrollContainer" parent="Songs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
grow_horizontal = 0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Songs/ScrollContainer"]
margin_right = 63.0
margin_bottom = 60.0
alignment = 1

[node name="GrayTiles" parent="Songs/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 63.0
margin_bottom = 12.0
text = "GrayTiles"
align = 0

[node name="GridBased" parent="Songs/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 16.0
margin_right = 63.0
margin_bottom = 28.0
text = "GridBased"
align = 0

[node name="Button" parent="Songs/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 32.0
margin_right = 63.0
margin_bottom = 44.0
text = "OneMore"
align = 0

[node name="Button2" parent="Songs/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 60.0
text = "Mono"
align = 0

[node name="Description" type="Panel" parent="."]
margin_left = 168.0
margin_top = 32.0
margin_right = 280.0
margin_bottom = 144.0

[node name="Label" type="Label" parent="Description"]
margin_left = 8.0
margin_top = 8.0
margin_right = 104.0
margin_bottom = 104.0
text = "welcome_music"
autowrap = true

[node name="Label" type="Label" parent="."]
margin_left = 40.0
margin_right = 280.0
margin_bottom = 32.0
text = "music_box_title"
align = 1
valign = 1

[node name="Visualicer" parent="." instance=ExtResource( 5 )]
position = Vector2( 8, 176 )
width = 336.0

[connection signal="pressed" from="Songs/ScrollContainer/VBoxContainer/GrayTiles" to="." method="_on_GrayTiles_pressed"]
[connection signal="pressed" from="Songs/ScrollContainer/VBoxContainer/GridBased" to="." method="_on_GridBased_pressed"]
[connection signal="pressed" from="Songs/ScrollContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Songs/ScrollContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
